fix: marketplace dark mode css changes

--- a/frontend/src/_styles/theme.scss
+++ b/frontend/src/_styles/theme.scss
@@ -31,6 +31,10 @@ button {
   font-weight: 500;
 }
 
+.color-inherit {
+  color: inherit;
+}
+
 .text-right {
   text-align: right;
 }
